# game-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: Toolchain-mingw32.cmake
cmake/Modules/: FindBox2D.cmake  FindGLEW.cmake  FindLuaJIT.cmake
include/: Application.h  BaseEngine.h  Box2DCompat.h  Camera.cpp  Camera.h  Color.h  Component.h  Convex.h  Entity.h  Environment.h  Event.h  Font.h  GameEngine.h  GameObject.h  GameState.h  Level.h  Lua.h  LuaCall.h  LuaClass.h  LuaWrapper.h  Math.h  Object.h  Player.h  Polygon.h  Positionable.h  Primitives.h  Prop.h  Rect.h  Renderable.h  Resource.h  ResourceManager.h  Subsystem.h  SubsystemThread.h  TestLevel.h  Texture.h  Vector2.h  Widget.h  YamlLoader.h
include/components/: Body.h  Collidable.h  FontRenderable.h  Movable.h  Positionable.h  Renderable.h  Shape.h  SolidRenderable.h  StaticPos.h  TextureRenderable.h  Tracker.h  Updatable.h  Walkable.h  all.h
include/interfaces/: IPositionable.h
include/lua/: LuaClass.h  LuaClasses.h  LuaComponent.h  LuaEntity.h  LuaObject.h  LuaPlayer.h  LuaPositionable.h  LuaWrapper.h  luna.h
include/states/: LevelState.h  WorldManipulateState.h
include/subsystems/: GraphicsSubsystem.h  InputSubsystem.h  LogicSubsystem.h  LuaSubsystem.h  PhysicsSubsystem.h  Profiler.h  UISubsystem.h
include/widgets/: SolidWidget.h  TextWidget.h
properties/: config.yaml
res/images/: test-ship.xcf
res/levels/: level01.lua  level01.yaml
res/lua/: LibFx-1.1.lua  console.lua  controlState.lua  debug.lua  env.lua  events.lua  game.lua  init.lua  level.lua  main.lua  make.lua  selector.lua  states.lua  ui.lua  util.lua
res/lua/base/: events.lua  make.lua  persistence.lua  selector.lua  store.lua
res/lua/components/: eventlistener.lua
res/lua/debug/: filewatcher.lua
res/lua/entities/: player.lua
res/lua/game/: level.lua  main.lua  states.lua
res/lua/game/states/: control.lua  debug.lua
res/lua/levels/: 01.lua
res/lua/lib/: LibFx-1.1.lua
res/lua/ui/: console.lua  main.lua
res/shaders/: bloom1.frag  bloom2.frag
src/: Application.cpp  Application.h  BaseEngine.cpp  BaseEngine.h  Box2DCompat.cpp  Camera.cpp  Color.cpp  Component.cpp  Convex.cpp  Entity.cpp  Environment.cpp  Event.cpp  Font.cpp  GameEngine.cpp  GameEngine.h  GameObject.cpp  GameState.cpp  Level.cpp  Level.h  LuaCall.cpp  LuaClass.cpp  LuaWrapper.cpp  Math.cpp  Object.cpp  Player.cpp  Polygon.cpp  Positionable.cpp  Primitives.cpp  Prop.cpp  Rect.cpp  Renderable.cpp  Resource.cpp  ResourceManager.cpp  Subsystem.cpp  SubsystemThread.cpp  TestLevel.cpp  Texture.cpp  Texture.h  Vector2.cpp  Vector2.h  (+3 more)
src/components/: Body.cpp  Collidable.cpp  FontRenderable.cpp  Movable.cpp  Positionable.cpp  Renderable.cpp  Shape.cpp  SolidRenderable.cpp  StaticPos.cpp  TextureRenderable.cpp  Tracker.cpp  Updatable.cpp  Walkable.cpp
src/lua/: LuaBody.cpp  LuaClass.cpp  LuaComponent.cpp  LuaEntity.cpp  LuaFontRenderable.cpp  LuaGameEngine.cpp  LuaGraphics.cpp  LuaObject.cpp  LuaPlayer.cpp  LuaPositionable.cpp  LuaRenderable.cpp  LuaSolidRenderable.cpp  LuaSolidWidget.cpp  LuaStaticPos.cpp  LuaTextWidget.cpp  LuaTextureRenderable.cpp  LuaUI.cpp  LuaWidget.cpp  LuaWrapper.cpp
src/states/: LevelState.cpp  WorldManipulateState.cpp
src/subsystems/: GraphicsSubsystem.cpp  InputSubsystem.cpp  LogicSubsystem.cpp  LuaSubsystem.cpp  PhysicsSubsystem.cpp  Profiler.cpp  UISubsystem.cpp
src/widgets/: SolidWidget.cpp  TextWidget.cpp
